# py-web-ssh

./: README.md  README.zh-CN.md  build.py  pyproject.toml
docs/: algorithms.md  algorithms.zh-CN.md  api.md  api.zh-CN.md  usage.md  usage.zh-CN.md  windows-build.md  windows-build.zh-CN.md
tests/: test_auth.py  test_cli.py  test_client_session.py  test_file_api.py  test_files.py  test_history.py  test_runtime_config.py  test_session.py  test_ssh_client.py  test_static_contract.py
webssh/: __init__.py  app.py  auth.py  client_session.py  files.py  history.py  models.py  runtime_config.py  session.py  ssh_client.py  transfers.py
webssh/static/: app.js  index.html  logs.html  styles.css
