[project]
name = "py-web-ssh"
version = "0.1.44"
description = "A Python web SSH client with xterm.js, reconnectable sessions, logs, and file transfer."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "paramiko>=3.4.0",
    "python-multipart>=0.0.9",
]

[tool.poetry]
packages = [{ include = "webssh" }]
include = ["webssh/static/*"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "httpx2>=2.4.0",
    "ruff>=0.5.0",
]

[project.scripts]
py-web-ssh = "webssh.app:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
